--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,15 @@
     <string name="app_name">SkeletonApp</string>
     <string name="SerializableActivity4Result">Serializable式传递对象</string>
     <string name="ParcelableActivity4Result">Parcelable式传递对象</string>
+    <string name="CustomControl4Title">自定义控件</string>
+    <string name="title_activity_custom_control4_title">CustomControl4Title</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="title_text">Title Text</string>
 </resources>
