--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_text">Title Text</string>
     <string name="listview">ListView用法</string>
+    <string name="recyclerview">RecyclerView用法</string>
 </resources>
